--- a/assets/scripts/templates/crypto-assets.handlebars
+++ b/assets/scripts/templates/crypto-assets.handlebars
@@ -21,6 +21,7 @@
         No Exchange listed
         {{/if}}
     </p>
+    <button class = "deleteCryptoAsset" data-id="{{book.id}}">Delete Cry</button>
   </section>
 
 {{/each}}
