--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,101 @@
 @import '~bootstrap/scss/bootstrap';
+
+.navbar {
+  background-color: adjust-hue(rgb(2, 31, 66), 10deg);
+}
+h1{
+  margin-right: 875px;
+}
+body{
+  background-color: rgb(2, 31, 66);
+  color: white;
+}
+
+  .content {
+    @include make-row;
+    &:empty {
+      &::before {
+        font-size: 3vh;
+        line-height: .85;
+        text-align: center;
+        width: 100%;
+        padding-top: 15px;
+      }
+    }
+  }
+
+.container {
+  display: flex;
+  justify-content: center;
+  background-color: adjust-hue(rgb(2, 31, 66), 10deg);
+  width: 500px;
+  padding-top: 15px;
+}
+
+p {
+  display: flex;
+  justify-content: center;
+  font-size: 3vh;
+}
+  button {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  border-radius: 50px;
+}
+
+.auth {
+  display: flex;
+  justify-content: center;
+  align-content: center
+}
+
+// .signIn-modal {
+// width: 100%;
+// height: 100%;
+// background-color: rgba (0, 0, 0, 0.7);
+// opacity: 0.7;
+// position: absolute;
+// top: 0;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+
+// .modal-content{
+//   width: 300px;
+//   height: 500;
+//   background-color: white;
+//   border-radius: 4px;
+//   text-align: center;
+//   padding:20px;
+// position: relative;
+// }
+// input {
+//   display: flex;
+//   justify-content: center;
+//   padding-top: 0;
+//   width: 80%;
+// }
+
+// button {
+//   margin-left: 580px;
+//
+// }
+
+// button:last-child{
+// }
+//
+// .close {
+//  position: absolute;
+//  top: 0;
+//  right: 14px;
+//  font-size: 42px;
+// transform: rotate(45deg);
+// cursor: pointer;
