Made changes to my handlebar and config

--- a/assets/scripts/templates/crypto-assets.handlebars
+++ b/assets/scripts/templates/crypto-assets.handlebars
@@ -21,7 +21,7 @@
         No Exchange listed
         {{/if}}
     </p>
-    <button class = "deleteCryptoAsset" data-id="{{book.id}}">Delete Cry</button>
+     <button type="submit" id="deleteCryptoAsset">Remove</button>
   </section>
 
 {{/each}}
