new files to commit

--- a/assets/scripts/templates/crypto-assets.handlebars
+++ b/assets/scripts/templates/crypto-assets.handlebars
@@ -1,9 +1,9 @@
 {{#each cyptos as |crypto|}}
   {{log crypto}}
   <section data-id="{{crypto.id}}">
-    <h6>Assets:</h6>
+    <h6>Asset:</h6>
     <h3>
-      {{limit crypto.asset 20}}
+      {{limit crypto.asset 15}}
     </h3>
     <h6>Amount:</h6>
     <p>
@@ -20,8 +20,9 @@
         {{else}}
         No Exchange listed
         {{/if}}
+        <button type="submit" class="btn btn-outline-danger deleteCryptoAsset" data-id="{{crypto._id}}">Delete</button>
     </p>
-     <button type="submit" id="deleteCryptoAsset" data-id="{{crypto._id}}">Delete</button>
+    {{> partial}}
   </section>
 
 {{/each}}
