--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -28,14 +28,14 @@ body{
   display: flex;
   justify-content: center;
   background-color: adjust-hue(rgb(2, 31, 66), 10deg);
-  width: 500px;
+  width: 400px;
   padding-top: 15px;
 }
 
 p {
   display: flex;
   justify-content: center;
-  font-size: 3vh;
+  font-size: 6vh;
 }
   button {
   background-color: black;
@@ -45,7 +45,7 @@ p {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 10px;
+  font-size: 15px;
   border-radius: 50px;
 }
 
@@ -55,47 +55,48 @@ p {
   align-content: center
 }
 
-// .signIn-modal {
-// width: 100%;
-// height: 100%;
-// background-color: rgba (0, 0, 0, 0.7);
-// opacity: 0.7;
-// position: absolute;
-// top: 0;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+.crypto-assets {
+    @extend .navbar-brand;
+    @extend .h1;
+    margin-bottom: 0;
+  }
 
+.content {
+    @include make-row;
 
-// .modal-content{
-//   width: 300px;
-//   height: 500;
-//   background-color: white;
-//   border-radius: 4px;
-//   text-align: center;
-//   padding:20px;
-// position: relative;
-// }
-// input {
-//   display: flex;
-//   justify-content: center;
-//   padding-top: 0;
-//   width: 80%;
-// }
+    &:empty {
+      &::before {
+        font-size: 10vh;
+        line-height: .85;
+        text-align: center;
+        width: 100%;
+      }
+    }
+  }
 
-// button {
-//   margin-left: 580px;
-//
-// }
+#authenticated {
+  display: none;
+  }
 
-// button:last-child{
-// }
-//
-// .close {
-//  position: absolute;
-//  top: 0;
-//  right: 14px;
-//  font-size: 42px;
-// transform: rotate(45deg);
-// cursor: pointer;
+  #sign-out{
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 100px;
+
+  }
+
+  #createCrypto{
+    margin-left: 50px;
+    font-size: 20px;
+  }
+
+  #change-password{
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 90px;
+  }
+
+  .updateCryptoAsset{
+    display: flex;
+    justify-content: center;
+  }
